# XMLTV-enhancer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  goal.md  pyproject.toml
.github/workflows/: publish-ghcr.yml
src/xmltv_enricher/: app.py  audit.py  cache.py  catalog.py  classifier.py  config.py  models.py  normalization.py  service.py  tmdb.py  xmltv.py
tests/: test_audit.py  test_catalog.py  test_classifier.py  test_normalization.py  test_xmltv.py
